--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "buynow",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": ">=14 <15"
+  },
   "main": "backend/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
