--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "engines": {
-    "node": ">=14 <15"
+    "node": "16.13.0"
   },
   "main": "backend/server.js",
   "scripts": {
