--- a/backend/package.json
+++ b/backend/package.json
@@ -2,12 +2,12 @@
   "name": "buynow",
   "version": "1.0.0",
   "description": "",
-  "main": "backend/server.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "build": "npm install  && cd ./frontend && npm install && npm run build",
-    "dev": "nodemon backend/server.js",
+    "dev": "nodemon server.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "author": "",
